--- a/App/App/App.vcxproj
+++ b/App/App/App.vcxproj
@@ -128,6 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="RealMain.cpp" />
+    <ClCompile Include="RealParser.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RealParser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
